--- a/02b_MetaCortex_AAEE_anal_portf.ipynb
+++ b/02b_MetaCortex_AAEE_anal_portf.ipynb
@@ -793,8 +793,8 @@
         "  # majd T1..T5 kummulált AR-t számolunk, Tetlock eljárásához hasonlóan\n",
         "  # (vagyis ha lenne T-1 vagy T0 AR, akkor T+5-re korrigálna)\n",
         "  vwp[\"window\"] = (pd.Series(range(vwp.shape[0])) - 1).values\n",
-        "  sigmawin = np.sqrt((5+1)*sigma1nap)\n",
-        "  sigmawinff3 = np.sqrt((5+1)*sigma1napff3)\n",
+        "  sigmawin = np.sqrt((5+1)*sigma1nap**2)\n",
+        "  sigmawinff3 = np.sqrt((5+1)*sigma1napff3**2)\n",
         "  # kummulált hozam és tesztstatisztikák számítása (modellenként)\n",
         "  vwp[\"car\"] = np.where(vwp['window'] == 5, (vwp[vwp['window'] > 0]['ar']).sum(), np.nan)\n",
         "  vwp['TS'] = np.where(vwp['window'] < 1, vwp['ar'] / sigma1nap, np.nan)\n",
